@@ -1701,6 +1701,93 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+annotation|@
+name|Test
+DECL|method|testNonexistentCoreReload
+specifier|public
+name|void
+name|testNonexistentCoreReload
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|CoreAdminHandler
+name|admin
+init|=
+operator|new
+name|CoreAdminHandler
+argument_list|(
+name|h
+operator|.
+name|getCoreContainer
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|SolrQueryResponse
+name|resp
+init|=
+operator|new
+name|SolrQueryResponse
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+name|admin
+operator|.
+name|handleRequestBody
+argument_list|(
+name|req
+argument_list|(
+name|CoreAdminParams
+operator|.
+name|ACTION
+argument_list|,
+name|CoreAdminParams
+operator|.
+name|CoreAdminAction
+operator|.
+name|RELOAD
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+name|CoreAdminParams
+operator|.
+name|CORE
+argument_list|,
+literal|"non-existent-core"
+argument_list|)
+argument_list|,
+name|resp
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Was able to successfully reload non-existent-core"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|assertEquals
+argument_list|(
+literal|"Expected error message for non-existent core."
+argument_list|,
+literal|"Core with core name [non-existent-core] does not exist."
+argument_list|,
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 end_class
 
